# esp32-band-decoder

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  antenna_switch.c  antenna_switch.cpp  antenna_switch.h  cat_parser.c  cat_parser.cpp  cat_parser.h  config_manager.cpp  config_manager.h  html_content.cpp  html_content.h  kc868_a16_hw.cpp  kc868_a16_hw.h  main.c  main.cpp  relay_controller.c  relay_controller.cpp  relay_controller.h  restart_manager.cpp  restart_manager.h  system_initializer.cpp  system_initializer.h  tcp_client.cpp  tcp_client.h  udp_client.cpp  udp_client.h  webserver.c  webserver.cpp  webserver.h  wifi_manager.c  wifi_manager.cpp  wifi_manager.h  wifi_manager.hpp
